<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background" />

    <EditText
        android:id="@+id/new_password_edittext"
        android:layout_width="404dp"
        android:layout_height="46dp"
        tools:ignore="MissingConstraints"
        android:textColor="@color/teal_200"
        android:textColorHint="#EBFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/New_password"
        android:inputType="textPassword">

    </EditText>

    <EditText
        android:id="@+id/confirm_password_edittext"
        android:layout_width="404dp"
        android:layout_height="46dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/new_password_edittext"
        android:textColor="@color/teal_200"
        android:textColorHint="#EBFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/Confrim_password"
        android:inputType="textPassword">

    </EditText>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_button"
        android:layout_marginTop="66dp"
        style="@style/ButtonStyle"
        android:text="@string/Change_password"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/new_password_edittext"/>
</androidx.constraintlayout.widget.ConstraintLayout>